2002-03-24  Ben Wing  <ben@xemacs.org>

	* Makefile.in.in (gui_objs):
	* Makefile.in.in (objs):
	Always include gui.c, to fix compile error when TTY-only.
	
	* EmacsFrame.c (EmacsFrameSetValues):
	* abbrev.c:
	* abbrev.c (abbrev_match_mapper):
	* abbrev.c (Fexpand_abbrev):
	* alloc.c:
	* alloc.c (malloc_warning):
	* alloc.c (allocate_lisp_storage):
	* alloc.c (Fcons):
	* alloc.c (noseeum_cons):
	* alloc.c (make_float):
	* alloc.c (make_vector):
	* alloc.c (Fvector):
	* alloc.c (make_bit_vector_internal):
	* alloc.c (make_bit_vector):
	* alloc.c (make_bit_vector_from_byte_vector):
	* alloc.c (Fbit_vector):
	* alloc.c (make_compiled_function):
	* alloc.c (Fmake_symbol):
	* alloc.c (allocate_event):
	* alloc.c (Fmake_marker):
	* alloc.c (noseeum_make_marker):
	* alloc.c (mark_string):
	* alloc.c (string_plist_ptr):
	* alloc.c (allocate_string_chars_struct):
	* alloc.c (make_uninit_string):
	* alloc.c (resize_string):
	* alloc.c (set_string_char):
	* alloc.c (Fmake_string):
	* alloc.c (init_string_ascii_begin):
	* alloc.c (make_string_nocopy):
	* alloc.c (make_lcrecord_list):
	* alloc.c (allocate_managed_lcrecord):
	* alloc.c (ADDITIONAL_FREE_marker):
	* alloc.c (verify_string_chars_integrity):
	* alloc.c (compact_string_chars):
	* alloc.c (debug_string_purity_print):
	* alloc.c (UNMARK_string):
	* alloc.c (common_init_alloc_once_early):
	* buffer.c (Fdecode_buffer):
	* buffer.c (finish_init_buffer):
	* buffer.c (Fother_buffer):
	* buffer.c (Fcurrent_buffer):
	* buffer.c (Fbury_buffer):
	* buffer.c (common_init_complex_vars_of_buffer):
	* buffer.h (wrap_buffer):
	* buffer.h (buffer_or_string_charbpos_to_bytebpos):
	* buffer.h (buffer_or_string_bytebpos_to_charbpos):
	* buffer.h (buffer_or_string_charbpos_to_membpos):
	* buffer.h (buffer_or_string_membpos_to_charbpos):
	* bytecode.c (execute_optimized_program):
	* bytecode.h (wrap_compiled_function):
	* callint.c:
	* callint.c (Fcall_interactively):
	* callproc.c:
	* callproc.c (call_process_cleanup):